# MysteryMachine

./: .gitignore  .hgignore  .hgsub  .hgsubstate  .hgtags  AUTHORS  CodingGuidelines  OriginalDesign  README  README.rst  ext.cfg  heading.py  list.cfg  pavement.py  pyproject.toml  requirements.txt  runtests.py  test.cfg  tox.ini
MysteryMachine/: ConfigDict.py  ConfigYaml.py  CorePluginManager.py  Exceptions.py  Extension.py  ExtensionInfo.py  ExtensionLib.py  ExtensionSecureID.py  Main.py  Packfile.py  TrustedPluginManager.py  VersionNr.py  __init__.py  dict_store.py
docs/: Anchor.html  Anchor.rst  AttributeInternals.html  AttributeInternals.rst  Attributes.html  Attributes.rst  BidiLink.html  BidiLink.rst  Category.html  Category.rst  CodingGuidelines.html  CodingGuidelines.rst  Commit.html  Commit.rst  DeveloperInformation.html  DeveloperInformation.rst  ExtendedText.html  ExtendedText.rst  Extensions.html  Extensions.rst  FileFormats.html  FileFormats.rst  Home.html  Home.rst  NameSpace.html  NameSpace.rst  ObjectModel.html  ObjectModel.rst  Objects.html  Objects.rst  Policies.html  Policies.rst  System.html  System.rst  Templates.html  Templates.rst  TitleIndex.html  TypeSystem.html  TypeSystem.rst  Validation.html  (+4 more)
examples/: format1.mmpack  test1.mmpack
patches/: yapsy.patch
scripts/: mysterymachine  mysterymachine_wx
tests/: ConfigDictTest.py  ConfigYamlTest.py  Dlink.py  ExtInfoTest.py  ExtLibTest.py  ExtSecIdTest.py  LibraryBase.py  Object.py  Parser.py  TestRichCompare.py  TrustExtManTest.py  VernoTest.py  attribTest.py  attribValueTest.py  ext.cfg  (+27 more)
(+66 files in other folders)
